--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     box-sizing: border-box;
 }
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
     :root {
         font-size: 14px;
     }
@@ -36,7 +36,7 @@ body {
 
 
 .espacio {
-    height: 7.5rem;
+    height: 4.5rem;
 }
 
 .header_image {
@@ -61,7 +61,7 @@ body {
     justify-content: space-around;
     font-family: 'IBM Plex Mono', monospace;
     color: #060A24;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1rem;
 }
 
@@ -96,13 +96,13 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
     .title {
         padding-left: 0;
-        margin: 0 1.1428571rem 1.71142857rem;
+        margin: 0 1.1428571rem 0.51142857rem;
         width: 70%;
         font-size: 2.57142857rem;
-        line-height: 2.5rem;
+        line-height: 3rem;
     }
 }
 
@@ -126,7 +126,7 @@ li:hover {
 
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .subtitle {
 
@@ -139,10 +139,9 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .espacio {
-
         display: none;
     }
 
@@ -174,20 +173,17 @@ li:hover {
     height: 3.5rem;
     font-family: 'IBM Plex Mono', monospace;
     color: #060A24;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.125rem;
     margin-top: 3.5rem;
     margin-left: 12.5rem;
 }
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
     .button_conocemas {
-        margin-left: 0%;
-        width: 95%;
-        position: relative;
-        left: 2.5%;
-        margin-bottom: 4%;
-        margin-top: 4%;
+        margin: 0;
+        width: 90%;
+        margin: 4% 5% 4% 5%;
     }
 }
 
@@ -208,9 +204,10 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
     .cards_episodes_container {
         clip-path: polygon(0 4%, 100% 0%, 100% 96%, 0% 100%);
+        height: 67.125rem;
     }
 }
 
@@ -226,7 +223,7 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
     .cards_episodes_title {
         font-size: 2.57142857rem;
         top: 4.28571429rem;
@@ -245,10 +242,11 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .cards_episodes_group {
         top: 9rem;
+
     }
 }
 
@@ -261,7 +259,7 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .cards_episode_single {
         width: 80%;
@@ -279,15 +277,16 @@ li:hover {
     justify-content: center;
     z-index: 1;
     position: relative;
-    top: 3rem;
+    top: -5rem;
+    margin-bottom: -5%;
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .container_dedondevenimos {
         flex-direction: column;
-        margin-top: 8rem;
+        margin-top: 13rem;
     }
 }
 
@@ -297,14 +296,14 @@ li:hover {
     height: 41.25rem;
     width: auto;
     position: relative;
-    top: -12.5%;
+    top: -5%;
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .dedondevenimos_image {
-        align-content: center;
+        align-items: center;
 
 
     }
@@ -320,17 +319,18 @@ li:hover {
     height: 5.625rem;
     position: relative;
     left: 20%;
-    bottom: 3.75rem;
+
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .dedondevenimos_title {
         font-size: 2.57142857rem;
         width: 50%;
         height: 6rem;
         left: 10%;
+        line-height: 3rem;
 
     }
 }
@@ -353,7 +353,7 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
 
     .dedondevenimos_paragraph {
@@ -363,7 +363,7 @@ li:hover {
         position: relative;
         align-content: center;
         left: 10%;
-        margin-top: -2rem;
+        margin-top: 2rem;
         display: block;
 
     }
@@ -382,20 +382,21 @@ li:hover {
     font-size: 3rem;
     font-weight: 500;
     color: #060A24;
-    margin: 4rem 0 2.25rem 12.5rem;
+    margin: 0rem 0 2.25rem 12.5rem;
 }
 
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .invitados_title {
 
-        margin: 14rem 0 2.25rem 1rem;
+        margin: 10rem 0 2.25rem 1rem;
         font-size: 2.57142857rem;
         padding-top: 2.375rem;
         margin-left: 10%;
         width: 50%;
+        line-height: 3rem;
 
     }
 }
@@ -409,7 +410,7 @@ li:hover {
 
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .container_invitados-estelares_images {
 
@@ -427,7 +428,7 @@ li:hover {
 }
 
 
-@media screen and (max-width:400px) {
+@media (min-width: 200px) and (max-width:768px) {
 
     .container_invitados-estelares_images_png {
 
@@ -444,6 +445,9 @@ li:hover {
     height: auto;
 }
 
+
+
+
 .nuestros-temas_title {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #060A24;
@@ -452,6 +456,22 @@ li:hover {
     margin: 4rem 0px 4.3125rem 12.5rem;
 }
 
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .nuestros-temas_title {
+
+        margin: 4rem 0 0.25rem 1rem;
+        font-size: 2.57142857rem;
+        margin-left: 10%;
+        width: 70%;
+        line-height: 3rem;
+    }
+}
+
+
+
 .container_nuestros-temas_icons {
     display: flex;
     align-content: center;
@@ -459,6 +479,24 @@ li:hover {
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1.5rem;
 }
+
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .container_nuestros-temas_icons {
+
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-size: 1.5rem;
+    }
+}
+
+
 
 .container_nuestros-temas_icon {
     display: flex;
@@ -472,17 +510,48 @@ li:hover {
     width: 20%;
 }
 
+
+@media (min-width: 200px) and (max-width:768px) {
+    .container_nuestros-temas_icon {
+
+        font-size: 1.7142857rem;
+        color: #060A24;
+        width: 100%;
+    }
+}
+
+
 .nuestros-temas_icon {
     width: auto;
     height: 6.5rem;
     margin-bottom: 1.8125rem;
 }
 
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .nuestros-temas_icon {
+        margin-bottom: 4%;
+        margin-top: 13%;
+    }
+}
+
 .nuestros-temas_text {
     text-align: center;
     width: 50%;
-
 }
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+
+    .nuestros-temas_text {
+        text-align: center;
+        width: 70%;
+    }
+}
+
 
 .container_novedades {
     height: 32.375rem;
@@ -493,6 +562,20 @@ li:hover {
     align-items: center;
 }
 
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .container_novedades {
+        height: 24.3571428571rem;
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        margin-top: 10%;
+
+    }
+}
+
+
 .novedades_title {
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 300;
@@ -502,16 +585,47 @@ li:hover {
     padding-top: 13.3125rem;
 }
 
+
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .novedades_title {
+        font-size: 2.57142857rem;
+        text-align: center;
+        padding-top: 15%;
+        width: 50%;
+    }
+}
+
+
+
+
 .novedades_btn {
     background: linear-gradient(225deg, #00F0B8, #00F0B8);
     border: none;
     width: 21.5625rem;
     height: 3.5rem;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 500;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 600;
     font-size: 1.125rem;
     margin: 3.5rem 0 4.1875rem 0;
 }
+
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+
+    .novedades_btn {
+
+
+        height: 3.428571rem;
+        font-size: 1.142857rem;
+        margin: 8% 0 0 0;
+    }
+}
+
 
 .novedades_btn:hover {
     background: linear-gradient(225deg, #0000FE, #00F0B8);
@@ -533,6 +647,22 @@ li:hover {
     padding: 0 6.25rem;
     align-items: center;
 }
+
+
+@media (min-width: 200px) and (max-width:768px) {
+
+    .container_footer {
+        display: flex;
+        flex-direction: column;
+        padding: 8% 8%;
+        align-items: center;
+        height: 8.642857rem;
+    }
+
+
+}
+
+
 
 .footer_icons_group {
     width: 14.625rem;
